--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starttest",
+  "name": "hostiran",
   "homepage": "https://saeedwebdev.ir",
   "private": true,
   "version": "0.0.0",
@@ -11,7 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tag0/use-text-width": "^1.2.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
