--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "react-router-hash-link": "^2.4.3",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
